--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "nestjs-db-unit",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Useful utils to simplify integration tests for nestjs / typeorm / postgres projects",
+  "files":["dist/**/*"],
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
   "scripts": {
@@ -9,6 +10,8 @@
     "clean": "rm -rf dist",
     "format": "prettier --write \"lib/**/*.ts\"",
     "publish:npm": "npm publish --access public",
+    "prepare": "npm run clean && npm run build",
+    "prepublishOnly": "npm test && npm run format",
     "test": "jest --config ./test/jest-it.json",
     "test:watch": "jest --watch --config ./test/jest-it.json",
     "test:cov": "jest --coverage --config ./test/jest-it.json",
