--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "nestjs-db-unit",
-  "version": "1.1.1",
+  "version": "1.2.1",
   "description": "Useful utils to simplify integration tests for nestjs / typeorm / postgres projects",
-  "files":["dist/**/*"],
+  "files": [
+    "dist/**/*"
+  ],
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
   "scripts": {
