--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestjs-db-unit",
-  "version": "1.3.2",
+  "version": "2.1.0",
   "description": "Useful utils to simplify integration tests for nestjs / typeorm / postgres projects",
   "files": [
     "dist/**/*"
@@ -39,33 +39,34 @@
   },
   "homepage": "https://github.com/mikhail-angelov/nestjs-db-unit#readme",
   "peerDependencies": {
-    "@nestjs/common": "^6.11.8",
-    "@nestjs/core": "^6.11.8",
-    "@nestjs/typeorm": "^7.1.0",
-    "typeorm": "^0.2.25"
+    "@nestjs/common": "^7.6.15",
+    "@nestjs/core": "^7.6.15",
+    "@nestjs/typeorm": "^7.1.5",
+    "typeorm": "^0.2.32"
   },
   "devDependencies": {
-    "@nestjs/common": "^7.3.2",
-    "@nestjs/core": "^7.3.2",
-    "@nestjs/platform-express": "^7.3.2",
-    "@nestjs/testing": "^7.3.2",
-    "@nestjs/typeorm": "^7.1.0",
-    "@types/express": "^4.17.7",
-    "@types/jest": "^26.0.4",
-    "@types/node": "^14.0.23",
-    "@types/supertest": "^2.0.10",
-    "jest": "^26.1.0",
-    "pg": "^8.3.0",
+    "@nestjs/cli": "^7.6.0",
+    "@nestjs/common": "^7.6.15",
+    "@nestjs/core": "^7.6.15",
+    "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/testing": "^7.6.15",
+    "@nestjs/typeorm": "^7.1.5",
+    "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.37",
+    "@types/supertest": "^2.0.11",
+    "jest": "^26.6.3",
+    "pg": "^8.5.1",
     "prettier": "^2.0.5",
-    "rxjs": "^6.6.0",
-    "supertest": "^4.0.2",
-    "ts-jest": "^26.1.2",
-    "ts-loader": "^8.0.1",
+    "rxjs": "^6.6.7",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.4",
+    "ts-loader": "^8.1.0",
     "tsconfig-paths": "^3.9.0",
-    "typeorm": "^0.2.25",
-    "typescript": "^3.9.7"
+    "typeorm": "^0.2.32",
+    "typescript": "^4.2.3"
   },
   "dependencies": {
-    "sqlite3": "^5.0.0"
+    "sqlite3": "^5.0.2"
   }
 }
