--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestjs-db-unit",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "description": "Useful utils to simplify integration tests for nestjs / typeorm / postgres projects",
   "files": [
     "dist/**/*"
@@ -45,11 +45,11 @@
     "typeorm": "^0.2.32"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.6.0",
-    "@nestjs/common": "^7.6.15",
-    "@nestjs/core": "^7.6.15",
-    "@nestjs/platform-express": "^7.6.15",
-    "@nestjs/testing": "^7.6.15",
+    "@nestjs/cli": "^8.1.6",
+    "@nestjs/common": "^8.2.4",
+    "@nestjs/core": "^8.2.4",
+    "@nestjs/platform-express": "^8.2.4",
+    "@nestjs/testing": "^8.2.4",
     "@nestjs/typeorm": "^7.1.5",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
@@ -67,6 +67,8 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "@types/geojson": "^7946.0.8",
+    "geojson": "^0.5.0",
     "sqlite3": "^5.0.2"
   }
 }
