--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "format": "prettier --write \"lib/**/*.ts\"",
     "publish:npm": "npm publish --access public",
     "prepare": "npm run clean && npm run build",
-    "prepublishOnly": "npm test && npm run format",
+    "prepublishOnly": "npm test && npm run format && npm version patch",
     "test": "jest --config ./test/jest-it.js",
     "test:watch": "jest --watch --config ./test/jest-it.js",
     "test:cov": "jest --coverage --config ./test/jest-it.js",
