--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestjs-db-unit",
-  "version": "2.4.1",
+  "version": "3.0.0",
   "description": "Useful utils to simplify integration tests for nestjs / typeorm / postgres projects",
   "files": [
     "dist/**/*"
@@ -14,7 +14,8 @@
     "publish:npm": "npm publish --access public",
     "prepare": "npm run clean && npm run build",
     "prepublishOnly": "npm test && npm run format && npm version patch",
-    "test": "jest --config ./test/jest-it.js",
+    "test": "NODE_ENV=test jest --config ./test/jest-it.js",
+    "test:mocha": "NODE_ENV=test mocha --require ts-node/register test/src/app.controller.mocha.ts",
     "test:watch": "jest --watch --config ./test/jest-it.js",
     "test:cov": "jest --coverage --config ./test/jest-it.js",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --config ./test/jest-it.json",
@@ -42,7 +43,7 @@
     "typeorm": "^0.2.32"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.2.1",
+    "@nestjs/cli": "^8.2.6",
     "@nestjs/common": "^8.3.0",
     "@nestjs/core": "^8.3.0",
     "@nestjs/platform-express": "^8.3.0",
@@ -52,13 +53,16 @@
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
     "@types/supertest": "^2.0.11",
+    "chai": "^4.3.6",
     "jest": "^26.6.3",
+    "mocha": "^10.0.0",
     "pg": "^8.5.1",
     "prettier": "^2.0.5",
     "rxjs": "^7.5.4",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
     "ts-loader": "^8.1.0",
+    "ts-node": "^10.8.0",
     "tsconfig-paths": "^3.9.0",
     "typeorm": "^0.2.32",
     "typescript": "^4.2.3"
@@ -66,6 +70,6 @@
   "dependencies": {
     "@types/geojson": "^7946.0.8",
     "geojson": "^0.5.0",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.8"
   }
 }
