--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
         "rootDir": "./lib",
         "skipLibCheck": true,
         "moduleResolution": "node",
-        "allowJs":true
+        "allowJs":true,
     },
     "include": [
         "lib/**/*"
